Fix 'Vote to move on' button to use old message (Request to End Chat) and fix width of chat input text box (by eliminating tasks.css CSS which was overriding standard behavior of form-control, and by using input-group as shown on linked StackOverflow response)

--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -18,7 +18,3 @@ body{
 	height: 34px;
 	width: 40%;
 }
-
-.form-control{
-	width:40% !important;
-}
